// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature/left-sidebar/LeftSidebarIconWrapper should render a LeftSidebarIconWrapper component 1`] = `
<span
  className="left-sidebar-icon-wrapper"
>
  <div />
</span>
`;

exports[`feature/left-sidebar/LeftSidebarIconWrapper should use passed in className value 1`] = `
<span
  className="left-sidebar-icon-wrapper custom-class"
>
  <div />
</span>
`;
